--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.16.1",
+    "bull": "^4.14.0",
+    "prisma": "^5.16.1",
+    "redis": "^4.6.14",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
