--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/bull": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.16.1",
     "bull": "^4.14.0",
